Use new shelf image, use and style active versions of icons. Preload those images to avoid flickering when first active

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -116,7 +116,6 @@ body:hover .visually-hidden button { display: none}
 
 header {
   font-size: 18px;
-  padding-bottom: 22px;
   .header_wrapper {
     position: relative;
     width: 100%;
@@ -132,38 +131,64 @@ header {
   .shelf {
     display: block;
     margin: 0 auto;
+    position: relative;
+    z-index: 0;
+    top: -30.8px
   }
   ul {
     text-align: center;
-    margin: 0 auto 4px;
+    margin: 0 auto;
     padding: 0;
     display: block;
-    height: 52px;
     li {
       display: inline-block;
-      height: 42px;
+      position: relative;
+      z-index: 1;
       a {
-        padding: 26px;
+        padding: 40px 35px;
         cursor: pointer;
-        margin: 0 10px;
+        margin: 0 16px;
         position: relative;
-        &.root_path {
-          background: image-url("Home.png") center/70px no-repeat;
-        }
-        &.strips_path {
-          background: image-url("Archive.png") center/70px no-repeat;
-        }
-        &.store_index_path {
-          background: image-url("Shop.png") center/70px no-repeat;
-        }
-        &.about_path {
-          background: image-url("About.png") center/70px no-repeat;
-        }
+        left: 1.2px;
         span {
           display: inline-block;
           position: absolute;
-          bottom: 0;
-          right: 0;
+          color: #404041;
+          font-size: 10.5px;
+          bottom: -10.1px;
+        }
+        &.strips_path {
+          background: image-url("Archive.png") center/80px no-repeat;
+          top: 1px;
+          left: 0.7px;
+          &:hover {
+            background: image-url("Archive2.png") center/80px no-repeat;
+          }
+          span {
+            right: 16.1px;
+          }
+        }
+        &.store_index_path {
+          background: image-url("Shop.png") center/80px no-repeat;
+          top: 1px;
+          &:hover {
+            background: image-url("Shop2.png") center/80px no-repeat;
+            top: 1px;
+          }
+          span {
+            right: 23.5px;
+          }
+        }
+        &.about_path {
+          background: image-url("About.png") center/80px no-repeat;
+          top: 0.8px;
+          &:hover {
+            background: image-url("About2.png") center/80px no-repeat;
+            top: 0.8px;
+          }
+          span {
+            right: 20.5px;
+          }
         }
       }
     }
@@ -176,9 +201,6 @@ header {
     a {
       position: absolute;
       bottom: 18px;
-      &.discord_link {
-        right: 113px;
-      }
       &.kofi_link {
         right: 69px;
       }
